# ai-plugin-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  ai-plugin.json  compose.yaml  fly.toml  pyproject.toml
libs/shared/: pyproject.toml
openai_plugin_store/: main.py  types.py
projects/api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
projects/api/src/: main.py
projects/api/src/projects/api/: main.py  scripts.py  types.py
projects/api/static/: index.html
projects/api/static/.well-known/: ai-plugin.json
src/: helpers.py  main.py  scripts.py  types.py
src/openai_plugin_store/: helpers.py  main.py
static/: index.html
static/.well-known/: ai-plugin.json
