[tool.poetry]
name = "openai-plugin-store"
version = "0.1.0"
description = ""
authors = ["Askar Yusupov <devex.soft@gmail.com>"]
readme = "README.md"
packages = [{ include = "openai_plugin_store", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.95.1", extras = ["all"]}
requests = "^2.30.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
