[tool.poetry]
name = "ai-plugin-hub"
version = "0.1.0"
description = ""
authors = ["Askar Yusupov <devex.soft@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
requests = "^2.30.0"
python-dotenv = "^1.0.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
lancedb = "^0.1.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
