[tool.poetry]
name = "projects-api"
version = "0.1.0"
description = ""
authors = ["Askar Yusupov <devex.soft@gmail.com>"]
readme = "README.md"
packages = [{ include = "projects", from = "src" }]

[tool.poetry.scripts]
download = "projects.api.scripts:download"
prepare = "projects.api.scripts:prepare"
find = "projects.api.scripts:find"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
requests = "^2.30.0"
python-dotenv = "^1.0.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
libs-shared = { path = "../../libs/shared" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
